# rust-cheatsheet

./: Cargo.toml  README.md  b.txt  filelist.txt
examples/: async_task.rs  module.rs
examples/async_task/: Cargo.toml
examples/async_task/src/: main.rs
examples/basic1/: Cargo.toml
examples/basic1/src/: closure_iter.rs  concurrency.rs  err.rs  main.rs  smart_pointers.rs  trait_.rs  trait_object.rs
examples/basic2/: Cargo.toml
examples/basic2/src/: main.rs  raw_pointer.rs  type_advance.rs  type_conversion.rs
examples/fileio_exam/: Cargo.toml
examples/fileio_exam/src/: main.rs
examples/filter_mobi/: Cargo.toml
examples/filter_mobi/src/: main.rs
examples/rstotxt/: Cargo.toml
examples/rstotxt/src/: main.rs
filetotxt/: Cargo.toml
filetotxt/src/: main.rs  sql.rs
mod_exam/: Cargo.toml
mod_exam/src/: A.rs  lib.rs
mod_exam/src/B/: C.rs  mod.rs
module/: Cargo.toml
module/src/: lib.rs  q.rs
src/: lib.rs
