[package]
name = "rust_cheatsheet"
version = "0.1.0"
authors = ["dobefore <1432338032@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_cheatsheet"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
mod_exam={version="0.1.0"}

[patch.crates-io]
# local module file/dir
mod_exam={path="mod_exam"}

[[example]]
name="async_task"
[[example]]
name="module"



