[package]
name = "rust_cheatsheet"
version = "0.1.0"
authors = ["dobefore <1432338032@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_cheatsheet"
path = "src/lib.rs"

[dependencies]
module={path="module"}
[workspace]
members=[
    "examples/async_task",
    "examples/fileio_exam",
    "examples/rstotxt",
    "examples/filter_mobi",
    "examples/basic1",
    "examples/basic2",
    "mod_exam",
    "module",
    "filetotxt"
    
]



